<resources>
    <string name="app_name">MyTrips</string>
    <string name="login_image">login_image</string>
    <string name="already_have_an_account">Already Have an Account ?</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="forgot_password">FORGOT PASSWORD ?</string>
    <string name="or">OR</string>
    <string name="google">google</string>
    <string name="facebook">facebook</string>
    <string name="new_user_register_now">New User? Register Now</string>
    <string name="user_name">User Name</string>
    <string name="registration">Registration</string>
    <string name="signup">SIGNUP</string>
    <string name="password_confirmation">Password Confirmation</string>
    <string name="upload_image">Upload image</string>
    <string name="account_recovery">Account Recovery</string>
    <string name="ok">OK</string>
    <string name="send">Send</string>
    <string name="plane_img">Plane</string>
    <string name="lets_go_plane_img_text">Let\'s Go</string>
    <string name="addTrip_tripName">Trip Name</string>
    <string name="addTrip_tripStart">Trip Start Point</string>
    <string name="addTrip_tripEnd">Trip End Point</string>
    <string name="addTrip_tripDate">Trip Date</string>
    <string name="addTrip_tripTime">Trip Time</string>
    <string name="tripType">Trip Type</string>
    <string name="spinner">spinner</string>
    <string name="addTrip_btn">Add</string>
    <string name="upcoming_item">Upcoming Item</string>
    <string name="trip_start_time">Start time</string>
    <string name="trip_start_date">Start date </string>
    <string name="trip_name">Trip Name</string>
    <string name="trip_status">Trip Status</string>
    <string name="trip_start_location">From</string>
    <string name="trip_end_location">To</string>
    <string name="upcomig_start">Start</string>
    <string name="start">Start</string>
    <string name="img">img</string>
    <string name="my_note">Add Note</string>
    <string name="add_note_img">add_note_img</string>
    <string name="add_note_Fbtn">Add bot fab</string>
    <string name="delete_note_fab">Delete Note</string>
    <string-array name="tripType_array">
        <item>One Direction</item>
        <item>Round Trip</item>
    </string-array>
    <string name="title_activity_add_note">AddNote</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="others">others</string>
    <string name="Logout">Logout</string>
    <string name="upcoming">Upcoming</string>
    <string name="history">History</string>
    <string name="history_map">History map</string>
    <string name="empty_notes">Notes List is Empty</string>
    <string name="emptyNotes_img">emptyNotes_img</string>
    <string name="user_img">user_img</string>
    <string name="add_note">add note</string>
    <string name="cancel_trip">cancel trip</string>
    <string name="addTripFab">addTripFab</string>

</resources>